; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wffile.c_RMDir.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wffile.c_RMDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSC_RMDIR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @RMDir(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  store i64 0, i64* %3, align 8
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @RemoveDirectory(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @FSC_RMDIR, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @ChangeFileSystem(i32 %8, i32 %9, i32* null)
  br label %13

11:                                               ; preds = %1
  %12 = call i64 (...) @GetLastError()
  store i64 %12, i64* %3, align 8
  br label %13

13:                                               ; preds = %11, %7
  %14 = load i64, i64* %3, align 8
  ret i64 %14
}

declare dso_local i64 @RemoveDirectory(i32) #1

declare dso_local i32 @ChangeFileSystem(i32, i32, i32*) #1

declare dso_local i64 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
